<resources>
    <string name="app_name">Traystorage</string>
    <string name="notice">Notice</string>
    <string name="error_network">No network connection</string>
    <string name="error_network_content">Please check network connection status and try again.</string>
    <string name="error_ssl_cert_invalid">Can you go to an unsafe website?</string>
    <string name="error_permission">You have to allow required permissions to run the app.</string>
    <string name="require_permission">App requires this permission to access the gallery.</string>
    <string name="ok">OK</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="continu">Continue</string>
    <string name="apply">Apply</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="delete">Delete</string>
    <string name="photo_max_size">Minimum memory size 5MB.</string>
    <string name="to_use">to use</string>
    <string name="permission_str">Please allow.</string>
    <string name="photo_str">Profile picture service provided</string>
    <string name="location">Location</string>
    <string name="location_str">Provide search service for nearby locations</string>
    <string name="permission_not_allow">You will not be able to use some features because you have not allowed some permissions.</string>
    <string name="add">Add</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="view">View</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="never_look">Don\'t show again</string>
    <string name="namep">Name<font color="red">*</font></string>
    <string name="birthdayp">Date of Birth<font color="red">*</font></string>
    <string name="sexp">Gender<font color="red">*</font></string>
    <string name="enter_name">Enter name</string>
    <string name="select_birthday">Select date of birth</string>
    <string name="enter_email">Enter email address</string>
    <string name="use_service">Use Service</string>
    <string name="input_id">Please enter your ID.</string>
    <string name="input_id4">Please enter an ID with at least 4 characters.</string>
    <string name="dbl_check_id">Please check for duplicate ID.</string>
    <string name="input_phone">Please enter your phone number</string>
    <string name="input_password">Please enter your password.</string>
    <string name="input_password6">Please input your password over 6-20 characters and english, numeric characters</string>
    <string name="input_cert_number">Please enter the verification code.</string>
    <string name="input_name">Please enter your name.</string>
    <string name="input_name2">Please enter a name with at least 2 characters.</string>
    <string name="input_birth">Please enter your date of birth.</string>
    <string name="input_email">Please enter your email.</string>
    <string name="incorrect_email">Email address is invalid.</string>
    <string name="login_suspended">Your account has been permanently suspended by the administrator.</string>
    <string name="login_waiting">Your account is in withdrawal pending state.\nWould you like to cancel the withdrawal?</string>
    <string name="login_not_registered">You are not a registered member.\nWould you like to sign up with this SNS account?</string>
    <string name="login_not_exist">The ID does not exist or\nthe password does not match.</string>
    <string name="findid_not_registered">This phone number is not registered.\nPlease check your phone number.</string>
    <string name="verify_phone">Please verify your phone number.</string>
    <string name="change_pwd_success">Password has been changed.\nPlease log in with your new password.</string>
    <string name="pwd_no_match">Passwords do not match.</string>
    <string name="wrong_pwd">You have entered the wrong password 5 or more times.\nWould you like to find your password?</string>
    <string name="signup_comp">Would you like to sign up with the information you entered?</string>
    <string name="cert_wrong">The verification code is incorrect.</string>
    <string name="verify_comp">Phone verification is complete.</string>
    <string name="authreq_dup"><font color="blue">This phone number is already registered.</font>\nWould you like to go to the ID search screen?</string>
    <string name="id_not_exit">The ID does not exist.</string>
    <string name="update_version">A new update is available.\nUpdate now.</string>
    <string name="network_error">No network connection.</string>
    <string name="network_error_msg">Please check your network connection and try again.</string>
    <string name="to_use1"> requires the following permissions:</string>
    <string name="to_use2">permissions to use</string>
    <string name="permission_approval_guid">Permission Guide</string>
    <string name="to_approve">Allow</string>
    <string name="contact">Contacts</string>
    <string name="option">Contact-based friend invitation service</string>
    <string name="permission_desc1">∙If you do not set the required permissions, app usage will be restricted.</string>
    <string name="permission_desc2">(For Android Marshmallow 6.0 and above users)</string>
    <string name="intro_1_1">Mountains of documents</string>
    <string name="intro_1_2">piling up every day —</string>
    <string name="intro_1_3">how do you organize them?</string>
    <string name="intro_2_1">Store and manage</string>
    <string name="intro_2_2">complex documents more easily!</string>
    <string name="skip">Skip</string>
    <string name="login_home1">Store and manage</string>
    <string name="login_home2">complex documents more easily</string>
    <string name="signin_home1">Store and manage</string>
    <string name="signin_home2">complex documents more easily</string>
    <string name="login">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="id">ID</string>
    <string name="auto_login">Auto Login</string>
    <string name="find_id">Find ID</string>
    <string name="password_reset">Reset Password</string>
    <string name="findauth_home1">Please verify your registered ID and\nphone number.</string>
    <string name="enter_id">Enter ID</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_cert_number">Enter verification code</string>
    <string name="cert_number">Verification Code</string>
    <string name="resent_code">Resend Code</string>
    <string name="auth_request">Request Verification</string>
    <string name="findauth_home2">Please verify the phone number\nyou used during sign up</string>
    <string name="inquiries">My Inquiries</string>
    <string name="contactus">Contact Us</string>
    <string name="nodocuments">No inquiries exist</string>
    <string name="inquiry_subject">Subject</string>
    <string name="contactus_label1">Please enter your inquiry related to Traystorage.\nOur team will respond as quickly as possible after reviewing it.</string>
    <string name="inquiry_subject_hint">Enter inquiry subject</string>
    <string name="inquiry_content">Content</string>
    <string name="inquiry_content_hint">Enter inquiry content</string>
    <string name="send">Send</string>
    <string name="noticeTitle">Notice</string>
    <string name="setting">Settings</string>
    <string name="account_info">Account Info</string>
    <string name="version_info">Version Info</string>
    <string name="edit">Edit</string>
    <string name="FAQ">FAQ</string>
    <string name="license">Open Source License</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy">Privacy Policy</string>
    <string name="marketing">Marketing Consent</string>
    <string name="logout">Log Out</string>
    <string name="withdrawal">Withdraw Account</string>
    <string name="phone_cert">Phone Verification</string>
    <string name="phone_cert1">Please verify your email and\nphone number used during sign up</string>
    <string name="change_password">Change Password</string>
    <string name="change_password1">Please enter your\nnew password</string>
    <string name="enter_password">Enter password</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="change_password_btn">Change Password</string>
    <string name="version_information">Version Information</string>
    <string name="version_information1">Please update to\nthe latest version</string>
    <string name="version_information2">You are currently using\nthe latest version</string>
    <string name="current_version">Current Version</string>
    <string name="newest_version">Latest Version</string>
    <string name="update_version_button">Update Version</string>
    <string name="terms_of_use1">Traystorage Terms of Use</string>
    <string name="withdrawal1">Important Notice Before Deactivating and Deleting Account</string>
    <string name="withdrawal_btn">Request Account Withdrawal</string>
    <string name="enter_id_email">ID or Email</string>
    <string name="double_chceck">Check Duplicate</string>
    <string name="password_hint">6–20 characters with letters and numbers</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="next">Next</string>
    <string name="all_agree">Agree to All</string>
    <string name="terms_of_use_req">Terms of Use (Required)</string>
    <string name="privacy_req">Privacy Policy (Required)</string>
    <string name="signup_title1">Please enter your account information\nto sign up</string>
    <string name="findid_result1">Please check your ID</string>
    <string name="findid_result_title">ID Confirmation</string>
    <string name="find_password">Find Password</string>
    <string name="signup_complete1">Traystorage\nSign up complete</string>
    <string name="signup_complete2">Please enter your profile information to start using the service</string>
    <string name="withdrawal_content"><b>Important Notice</b><font color="red"> (Must Read)</font>\n<br/>Once your account withdrawal is complete, it cannot be restored. Please be careful.\n<br/>Upon completion of withdrawal, all app usage history (document history, NFC registration history, etc.) will be deleted and cannot be recovered.\n\n<br/><b>How to Withdraw</b>\n<br/>When you select account withdrawal, a phone verification process will be conducted to prevent unauthorized use.\n\n<br/>Account withdrawal request will proceed after phone verification is complete.\n\n<br/><b>Withdrawal Waiting Period</b>\n<br/>There is a 14-day waiting period after verification, during which you can cancel the withdrawal request.</string>
    <string name="withdrawal2">Account withdrawal request\nhas been completed</string>
    <string name="withdrawal3">Withdrawal request date :</string>
    <string name="withdrawal4">If you log in again within 14 days, you can proceed with the <font color="#1c329b"><u>account recovery</u></font> process.</string>
    <string name="invite">Invite</string>
    <string name="invite1">Send invitation messages\nto friends who need\nTrayStorage</string>
    <string name="invite_btn">Invite Friends</string>
    <string name="profile_management">Profile Management</string>
    <string name="main_info">Basic Info</string>
    <string name="birthday">Date of Birth</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="doc_not_exist">No documents registered</string>
</resources>