<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app.splash.PermissionActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="activity"
            type="com.us.traystorage.app.splash.PermissionActivity" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingTop="70dp">

                <com.us.traystorage.app.common.font.FontTextView
                    style="@style/font_spoqahansansneo_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/permission_approval_guid"
                    android:textColor="@color/C151515"
                    android:textSize="22dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:orientation="horizontal">

                    <com.us.traystorage.app.common.font.FontTextView
                        style="@style/font_spoqahansansneo_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <com.us.traystorage.app.common.font.FontTextView
                        style="@style/font_spoqahansansneo_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:includeFontPadding="false"
                        android:text="@string/to_use1"
                        android:textColor="@color/C777777"
                        android:textSize="14dp" />
                </LinearLayout>

                <com.us.traystorage.app.common.font.FontTextView
                    style="@style/font_spoqahansansneo_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:includeFontPadding="false"
                    android:text="@string/permission_str"
                    android:textColor="@color/C777777"
                    android:textSize="14dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:background="@drawable/bg_permission_item"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="20dp">

                    <ImageView
                        android:id="@+id/image_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/icon_c_call_24" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/image_call"
                        android:orientation="vertical">

                        <com.us.traystorage.app.common.font.FontTextView
                            style="@style/font_spoqahansansneo_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact"
                            android:textColor="@color/black"
                            android:textSize="14dp" />

                        <com.us.traystorage.app.common.font.FontTextView
                            style="@style/font_spoqahansansneo_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:includeFontPadding="false"
                            android:text="@string/option"
                            android:textColor="@color/C777777"
                            android:textSize="14dp" />
                    </LinearLayout>


                </RelativeLayout>

                <com.us.traystorage.app.common.font.FontTextView
                    style="@style/font_spoqahansansneo_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:includeFontPadding="false"
                    android:text="@string/permission_desc1"
                    android:textColor="@color/C555555"
                    android:textSize="13dp" />

                <com.us.traystorage.app.common.font.FontTextView
                    style="@style/font_spoqahansansneo_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/permission_desc2"
                    android:textColor="@color/C555555"
                    android:textSize="13dp" />
            </LinearLayout>

        </RelativeLayout>

        <com.us.traystorage.app.common.font.FontButton
            android:id="@+id/next_btn"
            style="@style/font_spoqahansansneo_bold"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_btn_approve"
            android:gravity="center"
            android:onClick="@{()->activity.onApprove()}"
            android:text="@string/to_approve"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

</layout>
