<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="activity"
            type="com.kyad.traystorage.app.setting.WithdrawResultActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingHorizontal="4dp">

            <ImageView
                android:id="@+id/ib_close"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{()->activity.onBackPressed()}"
                android:padding="12dp"
                android:src="@drawable/ic_back"
                android:visibility="invisible" />

            <com.kyad.traystorage.app.common.font.FontTextView
                style="@style/font_spoqahansansneo_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:includeFontPadding="false"
                android:text="@string/withdrawal"
                android:textColor="@color/C151515"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="18dp"
            android:paddingTop="45dp">

            <com.kyad.traystorage.app.common.font.FontTextView
                style="@style/font_spoqahansansneo_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:lineHeight="34dp"
                android:text="@string/withdrawal2"
                android:textColor="#111111"
                android:textSize="22sp" />

            <com.kyad.traystorage.app.common.font.FontTextView
                android:id="@+id/text_date"
                style="@style/font_spoqahansansneo_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:includeFontPadding="false"
                android:text="@string/withdrawal3"
                android:textColor="#6B6C6E"
                android:textSize="14sp" />

            <com.kyad.traystorage.app.common.font.FontTextView
                style="@style/font_spoqahansansneo_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:includeFontPadding="false"
                android:lineHeight="20dp"
                android:text="@string/withdrawal4"
                android:textColor="#111111"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.kyad.traystorage.app.common.font.FontButton
                android:id="@+id/next_btn"
                style="@style/font_spoqahansansneo_bold"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_btn_approve_both"
                android:enabled="true"
                android:gravity="center"
                android:includeFontPadding="false"
                android:onClick="@{()->activity.onConfirm()}"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</layout>