<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <variable
            name="activity"
            type="com.kyad.traystorage.app.setting.ContactusActivity" />
        <variable
            name="model"
            type="com.kyad.traystorage.app.setting.ContactusActivity.ViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingHorizontal="4dp">

            <ImageView
                android:id="@+id/ib_close"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{()->activity.onBackPressed()}"
                android:padding="12dp"
                android:src="@drawable/ic_back" />

            <com.kyad.traystorage.app.common.font.FontTextView
                style="@style/font_spoqahansansneo_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:includeFontPadding="false"
                android:text="@string/contactus"
                android:textColor="#111111"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.kyad.traystorage.app.common.font.FontTextView
                    style="@style/font_spoqahansansneo_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/inquiry_subject"
                    android:textColor="#535455"
                    android:textSize="14sp" />

                <com.kyad.traystorage.app.common.font.FontEditText
                    android:id="@+id/text_subject"
                    style="@style/font_spoqahansansneo_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:hint="@string/inquiry_subject_hint"
                    android:includeFontPadding="false"
                    android:paddingVertical="12dp"
                    android:text="@={model.title}"
                    android:textColor="@color/black"
                    android:textColorHint="#6B6C6E"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#D6D7DC" />

                <com.kyad.traystorage.app.common.font.FontTextView
                    style="@style/font_spoqahansansneo_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:includeFontPadding="false"
                    android:text="@string/inquiry_content"
                    android:textColor="#535455"
                    android:textSize="14sp" />

                <com.kyad.traystorage.app.common.font.FontEditText
                    android:id="@+id/text_content"
                    style="@style/font_spoqahansansneo_regular"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/inquiry_content_hint"
                    android:includeFontPadding="false"
                    android:paddingVertical="12dp"
                    android:text="@={model.content}"
                    android:textColor="@color/black"
                    android:textColorHint="#6B6C6E"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#D6D7DC" />

                <com.kyad.traystorage.app.common.font.FontButton
                    style="@style/font_spoqahansansneo_bold"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/bg_btn_round"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:onClick="@{()->activity.onConfirm()}"
                    android:text="@string/send"
                    android:textColor="@{model.isValid?@color/white:@color/gray}"
                    android:textSize="20sp"
                    app:isSelect="@{model.isValid}" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>